frame/support/test/tests/construct_runtime_ui/invalid_module_details.stderr
error: expected one of: identifier, curly braces, `<`
 --> $DIR/invalid_module_details.rs:9:19
  |
9 |         system: System::(),
  |                         ^^
